@@ -9,7 +9,7 @@ public class DateValueFormatter extends ValueFormatter
         @Override public String getFormattedValue(float value)
             {
                 String out = "";
-                String in = new Date(new Float(value).longValue()).toString();
+                String in = new Date(Float.valueOf(value).longValue()).toString();
                 String[] parts = in.split(" ");
                 
                 out = parts[3] + " --- " + parts[2] + " - " + parts[1] + " - " + parts[5];
